@@ -537,11 +537,13 @@ Collection.prototype.findAndModify = function findAndModify (query, sort, doc, o
     queryObject.update = doc;
   }
 
-  this.db.executeDbCommand(queryObject, function (err, doc) {
+  this.db.executeDbCommand(queryObject, function (err, result) {
     if (err) {
-      callback(err, doc)
+      callback(err);
+    } else if (result.documents[0].ok != 1) {
+      callback(new Error(result.documents[0].errmsg));
     } else {
-      callback(err, doc.documents[0].value)
+      callback(err, result.documents[0].value)
     }
   });
 }
